--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"deploy": "cdk deploy --outputs-file outputs.json",
 		"bootstrap": "cdk bootstrap",
 		"diff": "cdk diff",
-		"destroy": "cdk destroy"
+		"destroy": "cdk destroy",
+		"dev": "tsx watch script/node.ts"
 	},
 	"devDependencies": {
+		"@hono/node-server": "^1.13.7",
 		"@types/jest": "^29.5.14",
 		"@types/node": "22.7.9",
 		"aws-cdk": "2.167.1",
@@ -25,11 +27,13 @@
 		"jest": "^29.7.0",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.2",
 		"typescript": "~5.6.3"
 	},
 	"dependencies": {
 		"aws-cdk-lib": "2.167.1",
-		"constructs": "^10.0.0",
+		"constructs": "^10.4.2",
+		"date-fns": "^4.1.0",
 		"hono": "^4.6.11",
 		"source-map-support": "^0.5.21"
 	}
